--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="left_side">
             <div class="profileText">
                 <div class="imgBx">
-                    <img src="./profile.jfif" alt="image">
+                    <img src="profile.jfif" alt="image">
                 </div>
                 <h2>Nidhi Dubey<br><span>Web Developer</span></h2>
             </div>
